Fixed UI alignment

--- a/public/css/styleFilters.css
+++ b/public/css/styleFilters.css
@@ -459,24 +459,24 @@ a:not([href]):not([tabindex]){
 
 #right-circle-btn,
 #left-circle-btn {
-  height: 50px;
-  width: 25px;
+  height: 70px;
+  width: 35px;
   border-width: 0;
 }
 
 #right-circle-btn {
-  border-bottom-right-radius: 50px;
-  border-top-right-radius: 50px;
+  border-bottom-right-radius: 70px;
+  border-top-right-radius: 70px;
 }
 
 #left-circle-btn {
-  border-bottom-left-radius: 50px;
-  border-top-left-radius: 50px;
+  border-bottom-left-radius: 70px;
+  border-top-left-radius: 70px;
 }
 
 #mu-profile-pic {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   padding: 0;
 }
